--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "WatchDogZZ web service used to handle requests from the differents apps of the project",
   "main": "run_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node run_server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/WatchDogZZ/server.git"
   },
-  "author": "Benjamin BARBESANGE, Benoît GARCON\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[o\u001b[F\u001b[B\u001b[B",
+  "author": "Benjamin BARBESANGE, Benoît GARCON",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/WatchDogZZ/server/issues"
