--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/WatchDogZZ/server#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "mongodb": "^2.2.11"
+    "mongodb": "^2.2.11",
+    "request": "^2.78.0"
   },
   "devDependencies": {
     "jasmine": "^2.5.2"
