--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ after_script: # Stop the server launched and the database
 #deployment on aws opsworks
 deploy:
     provider: opsworks
-    access-key-id: ${ACCESS_KEY_ID}
-    secret-access-key: ${SECRET_ACCESS_KEY}
-    app-id: ${APP_ID}
+    access-key-id: ${access_key_id}
+    secret-access-key: ${secret_access_key}
+    app-id: ${app_id}
