--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "watchdogzz_web_service",
   "version": "1.0.0",
   "description": "WatchDogZZ web service used to handle requests from the differents apps of the project",
-  "main": "run_server.js",
+  "main": "server.js",
   "scripts": {
     "test": "jasmine",
     "start": "node server.js"
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/WatchDogZZ/server#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "request": "^2.78.0"
