--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "jasmine",
-    "start": "node server.js"
+    "start": "node server.js",
+    "stop": "pkill --signal SIGINT watchdogzz"
   },
   "repository": {
     "type": "git",
