--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "watchdogzz_web_service",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "WatchDogZZ web service used to handle requests from the differents apps of the project",
   "main": "server.js",
   "scripts": {
@@ -22,7 +22,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
-    "request": "^2.78.0"
+    "request": "^2.78.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "jasmine": "^2.5.2"
