--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "letsencrypt-express": "^2.0.6",
     "mongodb": "^2.2.11",
     "request": "^2.78.0",
     "winston": "^2.3.1"
